--- a/app/views/application/index.html.erb
+++ b/app/views/application/index.html.erb
@@ -13,19 +13,19 @@
         <div class="bottom-content">
 
           <div class="like">
-            <%= link_to like_path(id: picture.id), method: :post do %>
+            <%= link_to like_path(id: picture.id), class: "ajax", remote: true, method: :post, 'data-type' => 'json' do %>
               <div class="like-btn text-center" picture_id="<%= picture.id %>">
-                <span class="<%= picture.heart_class(current_user) %>"></span>
+                <span id="photo<%= picture.id%>" class="<%= picture.heart_class(current_user) %>"></span>
               </div>
             <% end %>
-            <div class="likes-message"><%= picture.likes_message(current_user) %></div>
+            <div id="photo<%= picture.id%>" class="likes-message"><%= picture.likes_message(current_user) %></div>
           </div> <!-- end like -->
 
           <div class="user">
             <div><%= image_tag("#{picture.user.profile_pic}", width: "50") %></div>
             <div class="description">
               <div>
-                <strong><%= picture.user.name %></strong> 
+                <strong><%= picture.user.name %></strong>
                 <%= picture.description %>
               </div>
             </div>
@@ -35,6 +35,6 @@
 
       </div><!-- end INDIVIDUAL IMAGE -->
     <% end %>
-    
+
   </div> <!-- end feed-wrapper -->
 </div>
